ndb - bug#46890   1) don't increase cnoOfFragsCheckpointed for tables that are being dropped   2) set clcpCompletedState if LCP completes wo/ fragments